<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/error_message"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/network_error"
        android:textColor="@android:color/holo_red_dark"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/album_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
